@@ -8,6 +8,7 @@ Version 7.3. 15 April 2019 - xxx edition
 -Added DAAD debugger
 -Added DAAD vocabulary extractor
 -Added hdf to ide/mmc raw converter
+-Added hdf support to MMC emulation
 
 
 Version 7.2. 10 April 2019 - Neula edition
